--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    line-height: 1.5;
+    color: #212529;
+}
+
 .rounded-button {
     width: 8em;
     cursor: pointer;
